Aletheia_v3/kubernetes/redis-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: aletheia-redis-service # Standard service for clients
  labels:
    app: aletheia
    service: redis
spec:
  ports:
  - port: 6379
    targetPort: redis-client
    name: redis
  selector:
    app: aletheia
    service: redis
